implement read mail

--- a/dorg-catcher/client/src/app/top-bar/top-bar.component.html
+++ b/dorg-catcher/client/src/app/top-bar/top-bar.component.html
@@ -17,6 +17,10 @@
           <h6 class="title">Catcher / Usage Track</h6>
           <h4 class="sub_title">Download Job</h4>
       </span>
+      <span *ngSwitchCase="MANAGE_DOMAIN_URL">
+          <h6 class="title">Catcher / Administration</h6>
+          <h4 class="sub_title">Manage Domains</h4>
+      </span>
       <span *ngSwitchDefault>
           <h6 class="title">Catcher</h6>
       </span>
