--- a/dorg-catcher/client/src/app/domainHit/domainHit.component.html
+++ b/dorg-catcher/client/src/app/domainHit/domainHit.component.html
@@ -1,10 +1,7 @@
 <div id="content" role="main" class="person-rest-api">
   <as-split useTransition="true" unit="percent" direction="vertical">
     <as-split-area size="40" order="1" class="center" minSize="20">
-      <ag-grid-angular class="ag-theme-balham" rowSelection="multiple" [gridOptions]="domainHits.gridOptions"
-        (gridReady)="onGridReady($event)" [frameworkComponents]="domainHits.frameworkComponents"
-        (rowClicked)="showDetails($event)">
-      </ag-grid-angular>
+      <ag-grid [agGridVm]="domainHits" (rowclick) = showDetails($event)></ag-grid>
     </as-split-area>
     <as-split-area size="60" minSize="30" order="2" *ngIf="isShowDetails">
       <app-details id="34343" (closeDetails)="closeDetails($event)"></app-details>
